[gd_scene load_steps=6 format=3 uid="uid://d2lcm2puayjtd"]

[ext_resource type="Script" uid="uid://cy60vcqfaxyb4" path="res://level_2.gd" id="1_6q4t8"]
[ext_resource type="PackedScene" uid="uid://3c713cxf13x3" path="res://Block.tscn" id="2_8tcn8"]
[ext_resource type="PackedScene" uid="uid://65t84dkr2gc7" path="res://character2D.tscn" id="3_r6vdu"]
[ext_resource type="PackedScene" uid="uid://du0a5ipsfenwv" path="res://movingPlatform.tscn" id="4_8tcn8"]
[ext_resource type="PackedScene" uid="uid://cr63qvnesoq7h" path="res://EndLevel.tscn" id="5_r6vdu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6q4t8")

[node name="Block" parent="." instance=ExtResource("2_8tcn8")]
position = Vector2(636, 586)
scale = Vector2(10, 1)

[node name="Block4" parent="." instance=ExtResource("2_8tcn8")]
position = Vector2(249, -1649)
scale = Vector2(2, 1)

[node name="Block2" parent="." instance=ExtResource("2_8tcn8")]
position = Vector2(56, -928)
scale = Vector2(1, 25)

[node name="Block3" parent="." instance=ExtResource("2_8tcn8")]
position = Vector2(1217, -906)
scale = Vector2(1, 25)

[node name="MovingPlatform5" parent="." instance=ExtResource("4_8tcn8")]
position = Vector2(908, -1427)
upLimit = Vector2(300, 0)

[node name="MovingPlatform4" parent="." instance=ExtResource("4_8tcn8")]
position = Vector2(347, -1050)
upLimit = Vector2(-300, 0)

[node name="MovingPlatform3" parent="." instance=ExtResource("4_8tcn8")]
position = Vector2(901, -758)
upLimit = Vector2(300, 0)

[node name="MovingPlatform2" parent="." instance=ExtResource("4_8tcn8")]
position = Vector2(311, -493)
upLimit = Vector2(0, 300)

[node name="MovingPlatform" parent="." instance=ExtResource("4_8tcn8")]
position = Vector2(986, 264)
upLimit = Vector2(0, -500)

[node name="CharacterBody" parent="." instance=ExtResource("3_r6vdu")]
position = Vector2(200, 400)

[node name="Camera2D" type="Camera2D" parent="CharacterBody"]
limit_left = 56
limit_right = 1217
limit_bottom = 586

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
offset_left = 500.0
offset_right = 710.0
offset_bottom = 100.0
text = "Temps"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" parent="." instance=ExtResource("5_r6vdu")]
position = Vector2(253, -1860)
scale = Vector2(2, 2)

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
